@@ -1,10 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html>
-<head>
-<script src="../resources/js-test-pre.js"></script>
-</head>
-<body>
-<script src="script-tests/regress-131248.js"></script>
-<script src="../resources/js-test-post.js"></script>
-</body>
-</html>
